--- a/src/App.css
+++ b/src/App.css
@@ -34,3 +34,18 @@ img.ui.image {
 p {
   text-align: justify;
 }
+
+body {
+  /* The image used */
+  background-image: url("./img/background.png") !important;
+  background-color: rgba(255, 255, 255, 0);
+
+  /* Full height */
+  height: 100%;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
